fixed spacing error

--- a/excerpts.css
+++ b/excerpts.css
@@ -233,7 +233,8 @@ h6 {
 
 /* HTML Elements */
 p {
-    margin-bottom: 14px;
+    margin-bottom: 10px;
+    font-size: 15.5px;
 }
 
 /* Keyframes */
